/* 
  CustomKeyboard.strings
  SwPractice

  Created by bamq on 2017/6/1.
  Copyright © bamq. All rights reserved.
*/
"删除" = "del";
"空格" = "space";
"完成" = "finish";
