...
//
//  Created by bamq on 2017/5/31.
//  Copyright © bamq. All rights reserved
//

#import "CustomInputAccessoryView.h"
#define KEYBOARD_TYPE_LETTER @"Abc"
#define KEYBOARD_TYPE_CHARACTER @"#+="
#define KEYBOARD_TYPE_NUMBER @"12."
#define KEYBOARD_TYPE_DIGITAL @"数字"
#define KEYBOARD_TYPE_CPICFUNDS @"字母"
#define KEYBOARD_TYPE_ID @"id"
#define KEYBOARD_TYPE_ABC @"ABC"

...
